<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="5dp"
    android:gravity="center"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".Fan.FanActivity"
    tools:targetApi="jelly_bean_mr1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_margin="5sp"
            android:gravity="right"
            android:text="@string/fan"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="?attr/colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="?attr/colorPrimary"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:background="?attr/colorOnPrimary"
                android:padding="10dp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/average_weight_in_grams"
                android:textColor="?attr/colorPrimary"
                android:textSize="20sp"
                app:boxBackgroundColor="@color/white" />

            <EditText
                android:id="@+id/ftrd_AvgWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_amount_of_chicken"
                android:textColor="?attr/colorPrimary"
                android:textSize="20sp"
                app:boxBackgroundColor="@color/white" />

            <EditText
                android:id="@+id/ftrd_totalChicken"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical"
            android:padding="5dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/age_in_weeks"
                android:textColor="?attr/colorPrimary"
                android:textSize="20sp"
                app:boxBackgroundColor="@color/white" />

            <EditText
                android:id="@+id/ftrd_AgeInWeeks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_age_in_weeks"
                android:inputType="number"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical"
            android:padding="5dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/outer_temperature"
                android:textColor="?attr/colorPrimary"
                android:textSize="20sp"
                app:boxBackgroundColor="@color/white" />

            <EditText
                android:id="@+id/ftrd_OuterTemp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_outer_temperature"
                android:inputType="number"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:orientation="vertical">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/fan"
                android:textColor="?attr/colorPrimary"
                android:textSize="25sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                app:cardBackgroundColor="@color/main"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp"
                app:cardMaxElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="1sp"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="0dp"
                        app:cardMaxElevation="0dp">

                        <TextView
                            android:id="@+id/ftrd_fan"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:textColor="?attr/colorOnSecondary"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <Button
            android:id="@+id/calculateFan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/calculate_fan"
            android:textSize="20sp"
            app:backgroundTint="?attr/colorPrimary"
            app:iconTint="?attr/colorOnPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/main"
            android:orientation="vertical"></LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:gravity="right"
            android:text="@string/vent"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="?attr/colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/length_of_vent"
                android:textColor="?attr/colorPrimary"
                android:textSize="20sp"
                app:boxBackgroundColor="@color/white" />

            <EditText
                android:id="@+id/ftrd_ventLength"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amount_of_vent_to_open"
                android:textColor="?attr/colorPrimary"
                android:textSize="20sp"
                app:boxBackgroundColor="@color/white" />

            <EditText
                android:id="@+id/ftrd_AmountOpen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="20sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5sp"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="5sp"
            android:layout_marginEnd="5sp"
            android:layout_marginRight="5sp"
            android:layout_marginBottom="15sp"
            android:orientation="vertical">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/vent"
                android:textColor="?attr/colorPrimary"
                android:textSize="25sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                app:cardBackgroundColor="@color/main"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp"
                app:cardMaxElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="1sp"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="0dp"
                        app:cardMaxElevation="0dp">

                        <TextView
                            android:id="@+id/ftrd_ventWidth"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:textColor="?attr/colorOnSecondary"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <Button
            android:id="@+id/calculateVent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/calculate_vent"
            android:textSize="20sp"
            app:backgroundTint="?attr/colorPrimary"
            app:iconTint="?attr/colorOnPrimary" />

    </LinearLayout>
</ScrollView>