<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Humidity.HumidityActivity"
        android:layoutDirection="rtl"
        android:orientation="vertical"
        tools:targetApi="jelly_bean_mr1">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:text="@string/humidity"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="?attr/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dry_thermometer_value"
            android:textColor="?attr/colorPrimary"
            android:textSize="20sp"
            app:boxBackgroundColor="@color/white" />

        <EditText
            android:id="@+id/fh_dry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberSigned|number"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wet_thermometer_value"
            android:textColor="?attr/colorPrimary"
            android:textSize="20sp"
            app:boxBackgroundColor="@color/white" />

        <EditText
            android:id="@+id/fh_wet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberSigned|number"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="20sp" />

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/humidity"
                android:textColor="?attr/colorPrimary"
                android:textSize="25sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                app:cardBackgroundColor="@color/main"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp"
                app:cardMaxElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="1sp"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="0dp"
                        app:cardMaxElevation="0dp">

                        <TextView
                            android:id="@+id/fh_humidity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:textColor="?attr/colorOnSecondary"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

    <Button
        android:id="@+id/calculateHumidity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:text="@string/calculate_humidity"
        android:textColor="?attr/colorOnPrimary"
        app:backgroundTint="?attr/colorPrimary"
        app:iconTint="?attr/colorOnPrimary" />
    </LinearLayout>